\name{NEWS}
\title{News for Package Rvcg}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}


\section{Changes in Rvcg version 0.20.1 (2021-09-01)}{
  \subsection{bug fixed}{
    \itemize{
      \item vcgGeodist: fixed bug in C++ code leading to segfaults using clang
     
    }
  }
}

\section{Changes in Rvcg version 0.20 (2021-09-01)}{
  \subsection{new features}{
    \itemize{
      \item NEW: vcgIsotropicRemeshing: remesh to obtain uniform edge lengths
      \item NEW: vcgGeodist vcgGeodistPath: get geodesic paths on meshes
      \item NEW: vcgVertxNeighbours: find neighbourhood of vertices
      \item NEW: vcgFaceNormals: compute per face normals of a mesh
    }
  }
}


\section{Changes in Rvcg version 0.19.2 (2020-12-10)}{
  \subsection{small changes and fixes}{
    \itemize{
      
      \item made example code with suggested packages optional
      \item vcgQEdecim: set default optiplace=FALSE as this can lead to unwanted distortions in some cases.
      \item vcgClean: when iterate=T, also check removed faces.
      \item vcgPlyWrite: fixed mesh export for legacy rgl coloring
    }
  }
}

\section{Changes in Rvcg version 0.18 (2018-09-28)}{
  \subsection{small changes and fixes}{
    \itemize{
      \item Rintersect.cpp: check for valid pointer and increased search radius to 2*bbox
      \item vcgBox: added default argument mesh=vcgSphere()
      \item vcgArea: added option pertriangle to get per face area
      \item vcglib: fixed potential buffer overflow in src/vcglib/wrap/io_trimesh/export_stl.h
    }
  }
}


\section{Changes in Rvcg version 0.17 (2017-09-04)}{
  \subsection{small changes and fixes}{
    \itemize{
      \item vcgClostKD now sets all distances > 1e12 to NaN
      \item vcgOffWrite/vcgObjWrite: fixed typo in documentation
    }
  }
}


\section{Changes in Rvcg version 0.16 (2017-04-04)}{
  \subsection{new features}{
    \itemize{
      \item updated vcglib to version 1.0.1