@@ -1,7 +1,7 @@
-9b238198a43578cabf492a4cfc746de5 *DESCRIPTION
+74d6ef5b9389f9108af743a071281431 *DESCRIPTION
 70421679862083dcc8f49a7760416872 *LICENSE
 d7c0ccaf6b617450575872a399311a22 *NAMESPACE
-84fe3a840fdf27c6da0d256ca332400e *R/Rvcg-package.R
+9823fd986584fcc94e50776689d62eb7 *R/Rvcg-package.R
 2afb2cdada828c2f13c0dd878b77b341 *R/meshInfo.r
 6591229d45326b03388b0ce986966fba *R/meshintegrity.r
 176d68914c5928cd62c4a11219274300 *R/normorient.r
@@ -14,8 +14,8 @@ de11dd0101fb1c9b25974e84bfb25e69 *R/vcgBary.r
 b7904c9910a25d063b935da8a20a85ff *R/vcgClost.r
 29016f7b4b121cf23f21e344a2c61050 *R/vcgClostKD.r
 366d65dbdd7ca4b0cb642782ed946715 *R/vcgCreateKD.r
-68b795fe0572cc0b9d4477efb9ea15fa *R/vcgCurve.r
-83fb28b01bb2930cc2d33e042128fa2f *R/vcgDijkstra.r
+49b3eb0fed3c99c837f91fed3d5b6cc0 *R/vcgCurve.r
+87c99eaae297acc58c8afc4f690c7258 *R/vcgDijkstra.r
 6f8ba72a1b5ef717c366fdaa3d44b750 *R/vcgGetEdge.r
 5c7802f645e47624c8c0123a44e0ba9f *R/vcgImport.r
 91e5765a6fb502235296b0d2a359d363 *R/vcgIsolated.r
@@ -44,9 +44,9 @@ faf0a86433e3ef7bd49677856e2e0534 *cleanup
 46d5ac2e64067f09e27b51e00100194c *data/humface.rda
 db17f2c29701d7264f7365e9cd1b702d *inst/CITATION
 82859a94dba98071d74f06fbebc62cd4 *inst/COPYRIGHTS
-2e42e7bd4771480d3ef43021061518ff *inst/NEWS.Rd
+f4f7d947339887306418bec2c8468881 *inst/NEWS.Rd
 df6fedee25f982212d0432241728d1b0 *man/Rvcg-deprecated.Rd
-ecb4718fad7d3ec043f02fed826c238c *man/Rvcg-package.Rd
+cea4a812cae269c1aaabdcefc37d51b9 *man/Rvcg-package.Rd
 8557949e2a406f81ecfa32f58d24f94b *man/checkFaceOrientation.Rd
 50faefef4ae41cc9df0bf054c0793e21 *man/dummyhead.Rd
 eb6b8037f5b83f17bd739f9dd19b92bc *man/humface.Rd
@@ -65,11 +65,11 @@ e3be85979408dc687260b80d69412efc *man/vcgClostKD.Rd
 597eda7eeb9d43ddf270d47da22da8f0 *man/vcgClostOnKDtreeFromBarycenters.Rd
 feda30142b4d6a25b9be04db6396f529 *man/vcgCreateKDtree.Rd
 942905ab3cb85fc6c9db092cb1d2d852 *man/vcgCreateKDtreeFromBarycenters.Rd
-e54b11ac4a2f7ed74ffb845d4bc0e409 *man/vcgCurve.Rd
-1ee81635a7ac42ae6057077fc5c88223 *man/vcgDijkstra.Rd
+d3f78e27fa428bcf67bfdafcd86d7c8c *man/vcgCurve.Rd
+963883657b02c19171a714e2d6b50447 *man/vcgDijkstra.Rd
 d67b909da906f3cdbb029bb88be77c6e *man/vcgFaceNormals.Rd
-858724ba9ca13fae72fd08ccc5bf3586 *man/vcgGeodesicPath.Rd
-172f00a7442afbcfe90a2ebf31260033 *man/vcgGeodist.Rd
+8d2033f4a7ff43f2c508660b7fdba02c *man/vcgGeodesicPath.Rd
+60565aa723df8b5f4f4835097f0e93f9 *man/vcgGeodist.Rd
 5f956c8de19307c975a35c491d61ef3d *man/vcgGetEdge.Rd
 0d45e2b5e878fb28878ba14a8301d5e0 *man/vcgImport.Rd
 9584d3b7625ab897df61bf844750e75f *man/vcgIsolated.Rd
@@ -108,9 +108,9 @@ bc03232ac378b4d83408b38986359e87 *src/RQEdecim.cpp
 771c7522c1f1d87a5a206cb0f1d63ee3 *src/Rborder.cpp
 e1b0cc09f97f6322d5ffd7b309f5cc97 *src/Rclean.cpp
 dd297f1e60c8cc626849764c6e9e6009 *src/Rclost.cpp
-a645e3af60d6d7400573d6468691fc14 *src/Rcurvature.cpp
+dfca4c4068f19278461b4beb42645e95 *src/Rcurvature.cpp
 6665db1c85447ce2215a8b2cbe1b214d *src/Rdijkstra.cpp
-96f8361844c0ef4102c08f314925ff8d *src/Rexport.cpp
+bbe8c7be4e3471972bbd3c4a5c9477d1 *src/Rexport.cpp
 143b6fc07c72bd352f190eeb8c769221 *src/RgetEdge.cpp
 9da9506b374a83bed9e19c82ad13c244 *src/Rintersect.cpp
 1818ab3421852eff6900ff62b4ccbeb0 *src/Risolated.cpp
@@ -493,7 +493,7 @@ cdc941f89575c9a83dcfb2ba687b898b *src/vcglib/wrap/io_trimesh/export_gts.h
 2e81f91fd0f1400eb8862b72b41302b3 *src/vcglib/wrap/io_trimesh/export_idtf.h
 6692c25b7669a6d30eed1945ebaeb9f7 *src/vcglib/wrap/io_trimesh/export_iv.h
 903d630f3a02bac15bcaa06f996be1c6 *src/vcglib/wrap/io_trimesh/export_obj.h
-ab84f9884bd1e0b6400ef906c08cdc79 *src/vcglib/wrap/io_trimesh/export_off.h
+044b8eb14aaad4caade9dada923153bd *src/vcglib/wrap/io_trimesh/export_off.h
 f7f301f4d33402593c27680b70667d35 *src/vcglib/wrap/io_trimesh/export_ply.h
 bd9765bfaa851ac1f3928a99c1b56187 *src/vcglib/wrap/io_trimesh/export_smf.h
 f821f7b3e4a1b5ce86f644cd748f36d4 *src/vcglib/wrap/io_trimesh/export_stl.h
