@@ -16,11 +16,11 @@
 #' \item{K2 }{Principal Curvature 2}
 #'
 #' @examples
-#'  \dontrun{
+#' 
 #' data(humface)
 #' curv <- vcgCurve(humface)
 #' ##visualise per vertex mean curvature
-#'
+#' \dontrun{
 #' require(Morpho)
 #' meshDist(humface,distvec=curv$meanvb,from=-0.2,to=0.2,tol=0.01)
 #' }
